# 2023111825-WangHao-AI4SE

./: .gitignore  CLAUDE.md  pyproject.toml
.github/prompts/: plan-exp7LocalWebCodeReview.prompt.md
Experiment1/: README-zh.md  README.md
Experiment1/report/: main.aux  main.tex
Experiment1/src/: README.md  analyze.py  build_dataset.py  config.py  fetch.py
Experiment2/: README-zh.md  README.md
Experiment2/docs/: exp2-figure-results-narrative.md
Experiment2/report/: .gitignore  main.tex
Experiment2/src/: README.md  config.py  evaluate.py  feature_extraction.py  train.py  visualization.py
Experiment4/: README-zh.md  README.md
Experiment4/report/: main.tex
Experiment4/src/: __init__.py  config.py  context_builder.py  data.py  evaluate.py  llm_client.py  ml_baseline.py  prompts.py  run_experiments.py  sampling.py  visualization.py
Experiment5/: README-zh.md  README.md
Experiment5/docs/: 2026-07-08-exp5-ai-code-review-design.md  实验五结果分析.md
Experiment5/report/: main.tex  实验五结果分析.md
Experiment5/src/: README.md  __init__.py  analysis.py  config.py  data.py  evaluate.py  ml_features.py  ml_predict.py  nature_viz.py  run_llm.py  sampling.py  visualization.py
Experiment6/: README-zh.md  README.md
Experiment6/docs/: 2026-07-10-exp6-ai-code-review-improvement-design.md  实验六结果分析.md
Experiment6/report/: main.tex
Experiment6/results/: .gitignore
Experiment6/src/: __init__.py  config.py  context_builder.py  data.py  evaluate.py  github_fetch.py  judge.py  nature_viz.py  prompts.py  run_experiments.py  select_pstar.py  tests.py  visualization.py
Experiment7/: .gitignore  README-zh.md  README.md
docs/: repo-orientation.md  实验指导书_代码审查.md
report/: main.tex
(+97 files in other folders)
