[project]
name = "2023111825-WangHao-AI4SE"
version = "0.1.0"
description = "AI4SE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "tqdm>=4.68.3",
]
